--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -2,6 +2,10 @@
 
 
 ###Requirement
+This project required you to have flex and bison installed:
+```
+$ sudo apt-get install flex bison
+```
 In order to have a working grapher, java jre 1.6 is required. Without it, an error appears at the start of easea's compiled programs but can be safely ignored.
 
 EASEA had been compiled and tested with those following compilers:
